[bdist_wheel]
universal = 1

[flake8]
max-line-length = 79

[metadata]
description-file = README.md

[tool:pytest]
testpaths = tests
addopts =
    -r fEsxXw
    -vvv
    --doctest-modules
    --ignore setup.py
    --cov-report=term-missing
    --cov-report=xml
    --cov-report=html
    --cov=sca_tools

[versioneer]
VCS = git
style = pep440
versionfile_source = sca_tools/_version.py
versionfile_build = sca_tools/_version.py
tag_prefix = v
parentdir_prefix = sca_tools-

[yapf]
based_on_style = pep8
column_limit = 80
split_before_named_assigns = false
split_penalty_after_opening_bracket = 1000000
split_penalty_logical_operator = 30
